--- a/papers.bib
+++ b/papers.bib
@@ -540,3 +540,11 @@ year={2005},
 pages={6 pp.-},
 keywords={fault diagnosis;mobile robots;remaining life assessment;wheels;analytical model;data-driven method;failure cases;fault prognosis;model-based fault diagnosis;remaining useful life prediction;system models;wheeled mobile robot;Analytical models;Circuit faults;Fault detection;Fault diagnosis;Manufacturing industries;Mobile robots;Motion control;Power supplies;Power system modeling;Vehicle dynamics},
 doi={10.1109/IECON.2005.1569256},}
+@ARTICLE{Corbato,
+author={Corbato, Fernando J.},
+title={On Building Systems That Will Fail},
+journal={Communications of the ACM},
+month={September},
+year={1991},
+volume={34},
+number={9},}
